# cplusplus-hello

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.base  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: test-build-application.yml
app/: CMakeLists.txt  main.cpp
files/: README.md
lib/: CMakeLists.txt
lib/include/: Document.h  Hello.h  boost_beast.h  db_connection.h  db_global.h  http_server_small.h
lib/src/: Document.cpp  Hello.cpp  boost_beast.cpp  db_connection.cpp  db_global.cpp  http_server_small.cpp
